--- a/css/style.css
+++ b/css/style.css
@@ -74,8 +74,6 @@ a {
    align-items: center;
 }
 
-.logo {}
-
 .logo-text {
    font-size: 24px;
    font-weight: 700;
@@ -83,7 +81,6 @@ a {
    color: var(--color1);
 }
 
-.navigation {}
 
 .menu {
    list-style: none;
@@ -91,8 +88,6 @@ a {
    justify-content: space-between;
    gap: 34px;
 }
-
-.menu>li {}
 
 .menu li>a {
    font-size: 16px;
@@ -103,6 +98,21 @@ a {
 
 .menu li>a>i {
    font-size: 20px;
+}
+
+/* This css using only for mobile nav menu  */
+.navbar-item {
+   list-style: none;
+   display: none;
+   grid-area: navbar;
+}
+
+.logo-text {
+   grid-area: logo;
+}
+
+.nav-card {
+   grid-area: nav-card;
 }
 
 /*----------------------------------------
