--- a/css/responsive.css
+++ b/css/responsive.css
@@ -68,6 +68,10 @@
       ;
    }
 
+   .logo-text {
+      font-size: 16px;
+   }
+
    .banner-title {
       font-size: 28px;
       line-height: 42px;
